--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g set-clipboard on
 set -g mouse on
 setw -g mode-keys vi
 
@@ -18,5 +19,7 @@ bind -n C-Right select-pane -R
 bind -n C-Up select-pane -U
 bind -n C-Down select-pane -D
 
+# Mouse mode to copy test
+# bind-key -T vi-copy MouseDragEnd1Pane copy-pipe "xclip -selection clipboard"
 
 run '~/.tmux/plugins/tpm/tpm'
