--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@ setw -g mode-keys vi
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -s default-terminal 'xterm-256color'
 
 set -g @dracula-plugins "battery time"
@@ -13,13 +15,14 @@ set -g status-position top
 set -g status-right " %a %d/%m %I:%M %p"
 set -g status-right "#(LC_TIME=C date +'%a %d/%m %I:%M %p')"
 
-# Use Ctrl + Arrow keys to switch panes
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+# Keybindings
+bind -n C-t new-window
+bind -n C-n next-window
+bind -n C-w kill-pane
 
-# Mouse mode to copy test
-# bind-key -T vi-copy MouseDragEnd1Pane copy-pipe "xclip -selection clipboard"
+# set prefix
+#unbind C-b
+#set -g prefix C-Space
+#bind C-Space send-prefix
 
 run '~/.tmux/plugins/tpm/tpm'
