--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set -g set-clipboard on
-set -g mouse on
+set -g mouse off 
 setw -g mode-keys vi
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -19,10 +19,12 @@ set -g status-right "#(LC_TIME=C date +'%a %d/%m %I:%M %p')"
 bind -n C-t new-window
 bind -n C-n next-window
 bind -n C-w kill-pane
+#bind -n C-[ copy-mode  # Ctrl + [ enters copy mode
+#bind -n C-] paste-buffer  # Ctrl + ] pastes from tmux buffer
 
 # set prefix
-#unbind C-b
-#set -g prefix C-Space
-#bind C-Space send-prefix
+unbind C-b
+set -g prefix C-j
+bind C-j send-prefix
 
 run '~/.tmux/plugins/tpm/tpm'
